--- a/windows-terminal/settings.json
+++ b/windows-terminal/settings.json
@@ -1,189 +1,42 @@
 {
   "$schema": "https://aka.ms/terminal-profiles-schema",
   "alwaysShowTabs": true,
-  "defaultProfile": "{2c4de342-38b7-51cf-b940-2309a097f519}",
+  "defaultProfile": "{07b52e3e-de2c-5db4-bd2d-ba144ed6c273}",
   "initialCols": 100,
   "initialRows": 25,
-  "keybindings": [{
-      "command": "copy",
-      "keys": [
-        "ctrl+c"
-      ]
-    },
-    {
-      "command": "paste",
-      "keys": [
-        "ctrl+v"
-      ]
-    },
-    {
-      "command": "closeTab",
-      "keys": [
-        "ctrl+w"
-      ]
-    },
-    {
-      "command": "newTab",
-      "keys": [
-        "ctrl+t"
-      ]
-    },
-    {
-      "command": "newTabProfile0",
-      "keys": [
-        "ctrl+shift+1"
-      ]
-    },
-    {
-      "command": "newTabProfile1",
-      "keys": [
-        "ctrl+shift+2"
-      ]
-    },
-    {
-      "command": "newTabProfile2",
-      "keys": [
-        "ctrl+shift+3"
-      ]
-    },
-    {
-      "command": "newTabProfile3",
-      "keys": [
-        "ctrl+shift+4"
-      ]
-    },
-    {
-      "command": "newTabProfile4",
-      "keys": [
-        "ctrl+shift+5"
-      ]
-    },
-    {
-      "command": "newTabProfile5",
-      "keys": [
-        "ctrl+shift+6"
-      ]
-    },
-    {
-      "command": "newTabProfile6",
-      "keys": [
-        "ctrl+shift+7"
-      ]
-    },
-    {
-      "command": "newTabProfile7",
-      "keys": [
-        "ctrl+shift+8"
-      ]
-    },
-    {
-      "command": "newTabProfile8",
-      "keys": [
-        "ctrl+shift+9"
-      ]
-    },
-    {
-      "command": "nextTab",
-      "keys": [
-        "ctrl+tab"
-      ]
-    },
-    {
-      "command": "openSettings",
-      "keys": [
-        "ctrl+,"
-      ]
-    },
-    {
-      "command": "prevTab",
-      "keys": [
-        "ctrl+shift+tab"
-      ]
-    },
-    {
-      "command": "scrollDown",
-      "keys": [
-        "ctrl+shift+down"
-      ]
-    },
-    {
-      "command": "scrollDownPage",
-      "keys": [
-        "ctrl+shift+pgdn"
-      ]
-    },
-    {
-      "command": "scrollUp",
-      "keys": [
-        "ctrl+shift+up"
-      ]
-    },
-    {
-      "command": "scrollUpPage",
-      "keys": [
-        "ctrl+shift+pgup"
-      ]
-    },
-    {
-      "command": "switchToTab0",
-      "keys": [
-        "alt+1"
-      ]
-    },
-    {
-      "command": "switchToTab1",
-      "keys": [
-        "alt+2"
-      ]
-    },
-    {
-      "command": "switchToTab2",
-      "keys": [
-        "alt+3"
-      ]
-    },
-    {
-      "command": "switchToTab3",
-      "keys": [
-        "alt+4"
-      ]
-    },
-    {
-      "command": "switchToTab4",
-      "keys": [
-        "alt+5"
-      ]
-    },
-    {
-      "command": "switchToTab5",
-      "keys": [
-        "alt+6"
-      ]
-    },
-    {
-      "command": "switchToTab6",
-      "keys": [
-        "alt+7"
-      ]
-    },
-    {
-      "command": "switchToTab7",
-      "keys": [
-        "alt+8"
-      ]
-    },
-    {
-      "command": "switchToTab8",
-      "keys": [
-        "alt+9"
-      ]
-    }
-  ],
   "requestedTheme": "system",
   "showTabsInTitlebar": true,
   "showTerminalTitleInTitlebar": false,
   "wordDelimiters": " ./\\()\"'-:,.;<>~!@#$%^&*|+=[]{}~?\u2502",
   "profiles": [{
+      "acrylicOpacity": 0.75,
+      "background": "#000000",
+      "backgroundImage": "ms-appdata:///roaming/dev-dark.png",
+      "backgroundImageOpacity": 0.30000001192092896,
+      "backgroundImageStretchMode": "uniformToFill",
+      "closeOnExit": true,
+      "colorScheme": "Campbell",
+      "commandline": "wsl.exe -d Ubuntu-20.04",
+      "cursorColor": "#00FF00",
+      "cursorShape": "bar",
+      // "fontFace" : "UbuntuMono NF",
+      // "fontFace" : "Hack Nerd Font",
+      // "fontFace" : "Delugia Nerd Font",
+      "fontFace": "MesloLGS NF",
+      "fontSize": 10,
+      "guid": "{07b52e3e-de2c-5db4-bd2d-ba144ed6c273}",
+      "hidden": false,
+      "historySize": 9001,
+      "icon": "ms-appx:///ProfileIcons/{9acb9455-ca41-5af7-950f-6bca1bc9722f}.png",
+      "name": "Ubuntu-20.04",
+      "padding": "5, 5, 5, 5",
+      "scrollbarState": "hidden",
+      "snapOnInput": true,
+      "source": "Windows.Terminal.Wsl",
+      "startingDirectory": "//wsl$/Ubuntu-20.04/home/genesis",
+      "useAcrylic": false
+    },
+    {
       "acrylicOpacity": 0.75,
       "background": "#000000",
       "backgroundImage": "ms-appdata:///roaming/dev-dark.png",
@@ -245,27 +98,77 @@
       "useAcrylic": true
     },
     {
-      "acrylicOpacity": 0.5,
-      "closeOnExit": true,
-      "colorScheme": "Campbell",
-      "commandline": "wsl.exe -d Ubuntu",
-      "cursorColor": "#FFFFFF",
-      "cursorShape": "bar",
-      "fontFace": "Consolas",
-      "fontSize": 10,
-      "guid": "{2c4de342-38b7-51cf-b940-2309a097f518}",
-      "historySize": 9001,
-      "icon": "ms-appx:///ProfileIcons/{9acb9455-ca41-5af7-950f-6bca1bc9722f}.png",
-      "name": "UbuntuNext",
-      "padding": "0, 0, 0, 0",
-      "snapOnInput": true,
-      "useAcrylic": false
-    },
-    {
       "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
       "hidden": false,
       "name": "Azure Cloud Shell",
       "source": "Windows.Terminal.Azure"
+    }
+  ],
+  "keybindings": [{
+      "command": "copy",
+      "keys": [
+        "ctrl+c"
+      ]
+    },
+    {
+      "command": "paste",
+      "keys": [
+        "ctrl+v"
+      ]
+    },
+    {
+      "command": "closeTab",
+      "keys": [
+        "ctrl+w"
+      ]
+    },
+    {
+      "command": "newTab",
+      "keys": [
+        "ctrl+t"
+      ]
+    },
+    {
+      "command": "nextTab",
+      "keys": [
+        "ctrl+tab"
+      ]
+    },
+    {
+      "command": "openSettings",
+      "keys": [
+        "ctrl+,"
+      ]
+    },
+    {
+      "command": "prevTab",
+      "keys": [
+        "ctrl+shift+tab"
+      ]
+    },
+    {
+      "command": "scrollDown",
+      "keys": [
+        "ctrl+shift+down"
+      ]
+    },
+    {
+      "command": "scrollDownPage",
+      "keys": [
+        "ctrl+shift+pgdn"
+      ]
+    },
+    {
+      "command": "scrollUp",
+      "keys": [
+        "ctrl+shift+up"
+      ]
+    },
+    {
+      "command": "scrollUpPage",
+      "keys": [
+        "ctrl+shift+pgup"
+      ]
     }
   ],
   "schemes": [{
