--- a/etc/wsl.conf
+++ b/etc/wsl.conf
@@ -1,3 +1,11 @@
+# Enable extra metadata options by default
 [automount]
+enabled = true
 root = /
-options = "metadata"
+options = "metadata,umask=22,fmask=11"
+mountFsTab = false
+
+# Enable DNS – even though these are turned on by default, we'll specify here just to be explicit.
+[network]
+generateHosts = true
+generateResolvConf = true
