--- a/windows-terminal/settings.json
+++ b/windows-terminal/settings.json
@@ -1,174 +1,105 @@
 {
   "$schema": "https://aka.ms/terminal-profiles-schema",
-  "alwaysShowTabs": true,
-  "defaultProfile": "{2c4de342-38b7-51cf-b940-2309a097f518}",
-  "initialCols": 100,
-  "initialRows": 25,
-  "requestedTheme": "system",
-  "showTabsInTitlebar": true,
-  "showTerminalTitleInTitlebar": false,
-  "wordDelimiters": " ./\\()\"'-:,.;<>~!@#$%^&*|+=[]{}~?\u2502",
-  "profiles": [
+  // Add custom actions and keybindings to this array.
+  // To unbind a key combination from your defaults.json, set the command to "unbound".
+  // To learn more about actions and keybindings, visit https://aka.ms/terminal-keybindings
+  "actions": [
+    // Copy and paste are bound to Ctrl+Shift+C and Ctrl+Shift+V in your defaults.json.
+    // These two lines additionally bind them to Ctrl+C and Ctrl+V.
+    // To learn more about selection, visit https://aka.ms/terminal-selection
     {
-      "acrylicOpacity": 0.75,
-      "background": "#000000",
-      "backgroundImage": "ms-appdata:///roaming/dev-dark-v1.png",
-      "backgroundImageOpacity": 0.30000001192092896,
-      "backgroundImageStretchMode": "uniformToFill",
-      "closeOnExit": true,
-      "colorScheme": "Campbell",
-      "commandline": "wsl.exe -d Ubuntu",
-      "cursorColor": "#00FF00",
-      "cursorShape": "bar",
-      "fontFace": "MesloLGS NF",
-      "fontSize": 10,
-      "guid": "{2c4de342-38b7-51cf-b940-2309a097f518}",
-      "hidden": false,
-      "historySize": 9001,
-      "icon": "ms-appx:///ProfileIcons/{9acb9455-ca41-5af7-950f-6bca1bc9722f}.png",
-      "name": "Ubuntu",
-      "padding": "5, 5, 5, 5",
-      "scrollbarState": "visible",
-      "snapOnInput": true,
-      "source": "Windows.Terminal.Wsl",
-      "startingDirectory": "//wsl$/Ubuntu/home/genesis",
-      "useAcrylic": false
-    },
-    {
-      "acrylicOpacity": 0.5,
-      "background": "#012456",
-      "closeOnExit": true,
-      "colorScheme": "Campbell",
-      "commandline": "powershell.exe",
-      "cursorColor": "#FFFFFF",
-      "cursorShape": "bar",
-      "fontFace": "Consolas",
-      "fontSize": 10,
-      "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
-      "historySize": 9001,
-      "icon": "ms-appx:///ProfileIcons/{61c54bbd-c2c6-5271-96e7-009a87ff44bf}.png",
-      "name": "Windows PowerShell",
-      "padding": "0, 0, 0, 0",
-      "snapOnInput": true,
-      "startingDirectory": "%USERPROFILE%",
-      "useAcrylic": false
-    },
-    {
-      "acrylicOpacity": 0.75,
-      "closeOnExit": true,
-      "colorScheme": "Campbell",
-      "commandline": "cmd.exe",
-      "cursorColor": "#FFFFFF",
-      "cursorShape": "bar",
-      "fontFace": "Consolas",
-      "fontSize": 10,
-      "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
-      "historySize": 9001,
-      "icon": "ms-appx:///ProfileIcons/{0caa0dad-35be-5f56-a8ff-afceeeaa6101}.png",
-      "name": "cmd",
-      "padding": "0, 0, 0, 0",
-      "snapOnInput": true,
-      "startingDirectory": "%USERPROFILE%",
-      "useAcrylic": true
-    },
-    {
-      "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
-      "hidden": false,
-      "name": "Azure Cloud Shell",
-      "source": "Windows.Terminal.Azure"
-    },
-    {
-      "acrylicOpacity": 0.75,
-      "background": "#000000",
-      "backgroundImage": "ms-appdata:///roaming/dev-dark.png",
-      "backgroundImageOpacity": 0.30000001192092896,
-      "backgroundImageStretchMode": "uniformToFill",
-      "closeOnExit": true,
-      "colorScheme": "Campbell",
-      "commandline": "wsl.exe -d Ubuntu-20.04",
-      "cursorColor": "#00FF00",
-      "cursorShape": "bar",
-      "fontFace": "MesloLGS NF",
-      "fontSize": 10,
-      "guid": "{2c4de342-38b7-51cf-b940-2309a097f519}",
-      "historySize": 9001,
-      "icon": "ms-appx:///ProfileIcons/{9acb9455-ca41-5af7-950f-6bca1bc9722f}.png",
-      "name": "Ubuntu-20.04",
-      "padding": "5, 5, 5, 5",
-      "scrollbarState": "hidden",
-      "snapOnInput": true,
-      "startingDirectory": "//wsl$/Ubuntu-20.04/home/genesis",
-      "useAcrylic": false
-    }
-  ],
-  "keybindings": [
-    {
-      "command": "copy",
-      "keys": [
-        "ctrl+c"
-      ]
+      "command": {
+        "action": "copy",
+        "singleLine": false
+      },
+      "keys": "ctrl+c"
     },
     {
       "command": "paste",
-      "keys": [
-        "ctrl+v"
-      ]
+      "keys": "ctrl+v"
+    },
+    // Press Ctrl+Shift+F to open the search box
+    {
+      "command": "find",
+      "keys": "ctrl+shift+f"
+    },
+    // Press Alt+Shift+D to open a new pane.
+    // - "split": "auto" makes this pane open in the direction that provides the most surface area.
+    // - "splitMode": "duplicate" makes the new pane use the focused pane's profile.
+    // To learn more about panes, visit https://aka.ms/terminal-panes
+    {
+      "command": {
+        "action": "splitPane",
+        "split": "auto",
+        "splitMode": "duplicate"
+      },
+      "keys": "alt+shift+d"
     },
     {
       "command": "closeTab",
-      "keys": [
-        "ctrl+w"
-      ]
+      "keys": "ctrl+w"
     },
     {
       "command": "newTab",
-      "keys": [
-        "ctrl+t"
-      ]
-    },
-    {
-      "command": "nextTab",
-      "keys": [
-        "ctrl+tab"
-      ]
-    },
-    {
-      "command": "openSettings",
-      "keys": [
-        "ctrl+,"
-      ]
-    },
-    {
-      "command": "prevTab",
-      "keys": [
-        "ctrl+shift+tab"
-      ]
-    },
-    {
-      "command": "scrollDown",
-      "keys": [
-        "ctrl+shift+down"
-      ]
-    },
-    {
-      "command": "scrollDownPage",
-      "keys": [
-        "ctrl+shift+pgdn"
-      ]
-    },
-    {
-      "command": "scrollUp",
-      "keys": [
-        "ctrl+shift+up"
-      ]
-    },
-    {
-      "command": "scrollUpPage",
-      "keys": [
-        "ctrl+shift+pgup"
-      ]
+      "keys": "ctrl+t"
     }
   ],
+  "alwaysShowTabs": true,
+  "copyFormatting": "none",
+  "copyOnSelect": false,
+  "defaultProfile": "{2c4de342-38b7-51cf-b940-2309a097f518}",
+  "initialCols": 100,
+  "initialRows": 25,
+  "profiles": {
+    "defaults": {
+      "fontSize": 10,
+      "padding": "0"
+    },
+    "list": [
+      {
+        "colorScheme": "Campbell",
+        "backgroundImage": "ms-appdata:///roaming/dev-dark-v1.png",
+        "backgroundImageAlignment": "right",
+        "backgroundImageOpacity": 0.30000001192092896,
+        "commandline": "wsl ~ -d Ubuntu",
+        "cursorColor": "#00FF00",
+        "fontFace": "MesloLGS NF",
+        "guid": "{2c4de342-38b7-51cf-b940-2309a097f518}",
+        "hidden": false,
+        "name": "Ubuntu",
+        "padding": "5",
+        "source": "Windows.Terminal.Wsl",
+        "startingDirectory": "\\\\wsl$\\Ubuntu\\home\\gbgabiola"
+      },
+      {
+        "commandline": "powershell.exe",
+        "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
+        "hidden": false,
+        "name": "Windows PowerShell"
+      },
+      {
+        "commandline": "cmd.exe",
+        "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
+        "hidden": false,
+        "name": "Command Prompt"
+      },
+      {
+        "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
+        "hidden": false,
+        "name": "Azure Cloud Shell",
+        "source": "Windows.Terminal.Azure"
+      },
+      {
+        "fontFace": "MesloLGS NF",
+        "fontSize": 10,
+        "guid": "{07b52e3e-de2c-5db4-bd2d-ba144ed6c273}",
+        "hidden": false,
+        "name": "Ubuntu-20.04",
+        "source": "Windows.Terminal.Wsl",
+        "startingDirectory": "\\\\wsl$\\Ubuntu-20.04\\home\\genesis"
+      }
+    ]
+  },
   "schemes": [
     {
       "background": "#0C0C0C",
@@ -182,12 +113,14 @@
       "brightRed": "#E74856",
       "brightWhite": "#F2F2F2",
       "brightYellow": "#F9F1A5",
+      "cursorColor": "#FFFFFF",
       "cyan": "#3A96DD",
       "foreground": "#CCCCCC",
       "green": "#13A10E",
       "name": "Campbell",
       "purple": "#881798",
       "red": "#C50F1F",
+      "selectionBackground": "#FFFFFF",
       "white": "#CCCCCC",
       "yellow": "#C19C00"
     },
@@ -203,77 +136,37 @@
       "brightRed": "#E06C75",
       "brightWhite": "#DCDFE4",
       "brightYellow": "#E5C07B",
+      "cursorColor": "#FFFFFF",
       "cyan": "#56B6C2",
       "foreground": "#DCDFE4",
       "green": "#98C379",
       "name": "One Half Dark",
       "purple": "#C678DD",
       "red": "#E06C75",
+      "selectionBackground": "#FFFFFF",
       "white": "#DCDFE4",
       "yellow": "#E5C07B"
     },
     {
-      "background": "#FAFAFA",
-      "black": "#383A42",
-      "blue": "#0184BC",
-      "brightBlack": "#4F525D",
-      "brightBlue": "#61AFEF",
-      "brightCyan": "#56B5C1",
-      "brightGreen": "#98C379",
-      "brightPurple": "#C577DD",
-      "brightRed": "#DF6C75",
-      "brightWhite": "#FFFFFF",
-      "brightYellow": "#E4C07A",
-      "cyan": "#0997B3",
-      "foreground": "#383A42",
-      "green": "#50A14F",
-      "name": "One Half Light",
-      "purple": "#A626A4",
-      "red": "#E45649",
-      "white": "#FAFAFA",
-      "yellow": "#C18301"
-    },
-    {
-      "background": "#002B36",
-      "black": "#073642",
-      "blue": "#268BD2",
-      "brightBlack": "#002B36",
-      "brightBlue": "#839496",
-      "brightCyan": "#93A1A1",
-      "brightGreen": "#586E75",
-      "brightPurple": "#6C71C4",
-      "brightRed": "#CB4B16",
-      "brightWhite": "#FDF6E3",
-      "brightYellow": "#657B83",
-      "cyan": "#2AA198",
-      "foreground": "#839496",
-      "green": "#859900",
-      "name": "Solarized Dark",
-      "purple": "#D33682",
-      "red": "#DC322F",
-      "white": "#EEE8D5",
-      "yellow": "#B58900"
-    },
-    {
-      "background": "#FDF6E3",
-      "black": "#073642",
-      "blue": "#268BD2",
-      "brightBlack": "#002B36",
-      "brightBlue": "#839496",
-      "brightCyan": "#93A1A1",
-      "brightGreen": "#586E75",
-      "brightPurple": "#6C71C4",
-      "brightRed": "#CB4B16",
-      "brightWhite": "#FDF6E3",
-      "brightYellow": "#657B83",
-      "cyan": "#2AA198",
-      "foreground": "#657B83",
-      "green": "#859900",
-      "name": "Solarized Light",
-      "purple": "#D33682",
-      "red": "#DC322F",
-      "white": "#EEE8D5",
-      "yellow": "#B58900"
+      "name": "Cobalt2",
+      "background": "#193549",
+      "black": "#000000",
+      "blue": "#1478DB",
+      "brightBlack": "#808080",
+      "brightBlue": "#1478DB",
+      "brightCyan": "#00ffff",
+      "brightGreen": "#33ff00",
+      "brightPurple": "#cc00ff",
+      "brightRed": "#ff0000",
+      "brightWhite": "#ffffff",
+      "brightYellow": "#ffff00",
+      "cyan": "#00c5c7",
+      "foreground": "#c7c7c7",
+      "green": "#3AD900",
+      "purple": "#ff2c70",
+      "red": "#ff2600",
+      "white": "#c7c7c7",
+      "yellow": "#ffc600"
     }
   ]
 }
