Update from genesisgabiola to gbgabiola

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -26,10 +26,10 @@
   s = status -sb   # Short status with current branch
   master = !git checkout master && git pull --prune
   develop = !git checkout develop && git pull --prune
-  
+
   # When doing "git git log" or some such, do not complain about "git"
   git = !git
-  
+
   # Commits log with pretty format
   l = log --all --graph --decorate --oneline
 
@@ -91,6 +91,6 @@
 # Example .gitlocal:
 # [user]
 #   name = Genesis Gabiola
-#   email = genesisgabiola@gmail.com
+#   email = gbgabiola@gmail.com
 [include]
   path = ~/.gitlocal
